<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>third_webots_pkg</name>
  <version>0.0.2</version>
  <description>Webots robot with mapping</description>
  <maintainer email="dmacmill@github.com">daniel</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>webots_ros2_driver</depend>
  <depend>webots_ros2_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>diff_drive_controller</depend>
  <depend>controller_manager</depend>
  <depend>robot_localization</depend>

  <!-- only necessary for mapping -->
  <depend>slam_toolbox</depend>
  <depend>rmw_cyclonedds_cpp</depend>

  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
